# ingestion-xml-gcs-athena

./: .gitignore  README.md  main.py  pyproject.toml
cloud_bronze/: bronze.py  cloud.py  main.py  parsexml.py  write.py
cloud_gold/: gold.py  main.py  writedelta.py
cloud_silver/: cloud.py  main.py  notas.py  silver.py  writedelta.py
ingestion_xml_gcs_athena/: __init__.py  cloud.py  connect.py  write.py  writedelta.py
ingestion_xml_gcs_athena/transform/: bronze.py  raw.py  silver.py
terraform/: function-bronze.tf  function-gold.tf  function-silver.tf  provider.tf  service-account.tf  storage-bucket.tf
